5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4472/executions/1795_3140.log
== TEST (2019-05-30 16:11:48) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

print (round(media,2))

print (1/5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:12:02) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

#print (round(media,2))

print (1/5)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:17:40) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	media = valor + vetor[-1]

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:18:19) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	media = valor1 + vetor[-1]

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:14) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1]
	media = (valor2 / size(vetor)) ** 1/5
	
i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:21:46) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1]
	media = (valor2 / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:04) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1]
	media = (valor2 / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
2.31578
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
0.96
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
0.31
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
0.31
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:22:45) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1] ** 5
	media = (valor2 / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:22:58) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1] ** 5
	media = (valor2 / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
1.87959
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
879.89
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
417.53
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
138.11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:23:12) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1] ** 5
	media = (valor2 / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:25:09) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	media = ((sum(vetor) ** 5) / size(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:26:10) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	media = ((sum(vetor) ** 5) / sum(vetor)) ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:27:28) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[0] ** 5) + 1
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
1.70091
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1795/3140/main.py", line 12, in <module>
    print (round(media,2))
NameError: name 'media' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:29:20) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[0] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:29:40) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[0] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
1.62699
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
222.91
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
104.25
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
41.06
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:30:11) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[0] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 0.2
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
2.15467
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
Valores: 0.78
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
Valores: 0.13
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
Valores: 0.16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:30:31) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 1/5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:30:49) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 1/5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
1.83802
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
879.22
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
417.51
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
138.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:31:57) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
2.08889
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
1101.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
521.64
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
179.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:31:58) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:32:03) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	media = valor1 + vetor[-1]
	
i = i + 1

print (round(media,2))

-- EXECUTION TIME:
787.598
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:32:15) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = soma + ((size(vetor)) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
1.17745
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
1101.36
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
521.64
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
179.01
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:33:02) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	valor1 = (vetor[0] ** 5) + 1
	valor2 = valor1 + vetor[-1]
	media = (valor2 / size(vetor)) ** 1/5
	
i = i + 1

print (round(media,2))

-- EXECUTION TIME:
720.653
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:30) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) 
	soma2 = soma + (size(vetor) - 1) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:37:58) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) 
	soma2 = soma + (sum(vetor) - 1) ** 5
	m = soma2 / sum(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:15) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) 
	soma2 = soma + (slen(vetor) - 1) ** 5
	m = soma2 / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:21) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) 
	soma2 = soma + (len(vetor) - 1) ** 5
	m = soma2 / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:38:49) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) 
	soma2 = soma #+ (len(vetor) - 1) ** 5
	m = soma2 / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:40:45) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + (size[vetor] -1) **5
	#soma2 = soma #+ (len(vetor) - 1) ** 5
	m = soma / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:41:31) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	#soma2 = soma #+ (len(vetor) - 1) ** 5
	m = soma / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:43:20) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = (len(vetor) - vetor[-1]) ** 5
	m = soma / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:43:43) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = (len(vetor) - vetor[-1]) ** 5
	m = soma / len(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.328226
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
879.19
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
417.48
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
138.05
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:45:04) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = size(vetor) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.36839
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
480.2
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
259.2
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
125.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:45:07) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma2 = size(vetor) ** 5
	m = soma2 / size(vetor)
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:46:51) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = n ** 5
	m = soma2 / n
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.598624
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
480.2
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
259.2
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
125.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:46:55) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = n ** 5
	m = soma2 / n
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:47:24) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = n - 1 ** 5
	m = soma2 / n
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.53286
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
0.17
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
0.17
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
0.16
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:47:25) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = n - 1 ** 5
	m = soma2 / n
	media = m ** 1/5
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:48:09) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:48:39) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.381742
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
4.07
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
2.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:22) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:50:56) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.325312
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
4.07
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
3.49
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
2.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:50:57) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:51:34) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = vetor[-1] ** 5 + (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:51:41) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = vetor[-1] ** 5 + (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.544724
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
5.6
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
4.82
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
3.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:11) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = size(vetor) - vetor[-1] ** 5 #+ (n - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:52:43) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = size(vetor) - 1 ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:52:52) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1 - vetor[-1]
	soma = soma + 1
	
	soma2 = size(vetor) - 1 ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- EXECUTION TIME:
0.496664
-- TEST CASE 1:
---- input:
[1.9,2.9,3.9,4.9,5.9,6.9,7.9]
---- correct output:
6.07
---- user output:
0.97
-- TEST CASE 2:
---- input:
[1.1,2.2,3.3,4.4,5.5,6.6]
---- correct output:
5.05
---- user output:
0.96
-- TEST CASE 3:
---- input:
[1.1,2.1,3.1,4.1,5.1]
---- correct output:
3.97
---- user output:
0.96
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:14) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = size(vetor) - 1 ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 16:53:27) 
-- CODE:
from numpy import *

vetor = array(eval(input("Valores: ")))

i = 0
n = size(vetor)
soma = 0

while i < size(vetor):
	soma = (vetor[i] ** 5) + 1
	soma = soma + 1
	
	soma2 = (size(vetor) - 1) ** 5
	m = soma2 / n
	media = m ** 0.2
	
	i = i + 1

print (round(media,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
